Change warninp filenm to std::string
This prevent buffer overflows with long filenames.

Fixes #2465

Change-Id: Ifcd264a6b33929f6b369d543c83c16d5378db937

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -12,6 +12,14 @@ Fixes where mdrun could behave incorrectly
 Fixes for ``gmx`` tools
 ^^^^^^^^^^^^^^^^^^^^^^^
 
+Fixed buffer overflow in grompp warnings
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+When grompp issued a warning or error with a filename/path of more than
+255 characters, a buffer overflow would occur. This could also happens
+during make check/test.
+
+:issue:`2465`
+
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
